(fixed): contact form alert and send button marginal spacing jump

--- a/htdocs/assets/style.css
+++ b/htdocs/assets/style.css
@@ -933,6 +933,10 @@ video {
   margin-top: 8rem;
 }
 
+.mt-4 {
+  margin-top: 1rem;
+}
+
 .mt-5 {
   margin-top: 1.25rem;
 }
